# victory-dressage

./: Cargo.toml  deno.json  index.html  package.json
src/: draw_signature.ts  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/socket-manager/: Cargo.toml
src-tauri/socket-manager/src/: lib.rs
src-tauri/src/: lib.rs  macros.rs  main.rs
src-tauri/src/commands/: alert_manager.rs  bell_timer.rs  choose_starter.rs  fetch.rs  log_out.rs  mark_comment.rs  mod.rs  recover.rs  replace_director.rs  search_for_judge.rs  signature.rs  update_preferences.rs  update_settings.rs
src-tauri/src/commands/logins/: mod.rs
src-tauri/src/commands/navigation/: mod.rs
src-tauri/src/commands/scoresheet/: confirm_marks.rs  mod.rs  start_list_bar.rs
src-tauri/src/commands/warnings/: blood.rs  equipement.rs  lameness.rs  manager.rs  meeting.rs  mod.rs  penalties.rs  status.rs
src-tauri/src/domain/: competition.rs  competitor.rs  ground_jury_member.rs  judge.rs  mod.rs  penalties.rs  position.rs  scoresheet.rs  show.rs  starter.rs  user.rs
src-tauri/src/domain/dressage_test/: dressage_test.rs  exercise.rs  mod.rs  movement_category.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/sockets/: manager.rs  message_types.rs  mod.rs  starter_impl.rs
src-tauri/src/sockets/handlers/: mod.rs
src-tauri/src/sockets/messages/: mod.rs
src-tauri/src/state/: application_page.rs  application_state.rs  battery.rs  managed_state.rs  mod.rs  store.rs  users.rs
src-tauri/src/templates/: choose_judge.rs  competition_list.rs  error.rs  icons.rs  login.rs  logout.rs  mod.rs  preferences.rs  result.rs  scoresheet.rs  settings.rs  welcome.rs
src-tauri/src/templates/scoresheet/: mod.rs  start_list_bar.rs  warnings.rs  warnings_bar.rs
src-tauri/src/traits/: mod.rs
