[package]
name = "victory-dressage"
version = "0.1.0"
description = "A Tauri App"
authors = ["aengus@horsesporttechnology.au"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "victory_dressage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["json"] }
ulid = { version = "1.1.3" }
jsonwebtoken = { version = "9.3.1", default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-store = "2"
hypertext = "^0.8.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["time"] }
futures-util = "0.3.31"
rmp-serde = "1.3.0"
battery = "0.7.8"
socket-manager = { path = "../../socket-manager" }
decimal = { path = "../../common-application/decimal", features = ["hypertext", "serde"] }
thiserror = "2.0.12"
tauri-plugin-fs = "2.4.1"

[target.'cfg(target_os = "ios")'.dependencies]
swift-bat = { git = "https://github.com/HorseSportTech/swift-bat.git" }
