[package]
name = "socket-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = {version = "0.3.31", default-features = false, features = ["sink"]}
rmp-serde = "1.3.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
